# QxOrmHelperMacros

./: CMakeLists.txt  QxOrmHelperMacros.Export.h  QxOrmHelperMacros.Precompiled.h  README.md  qxinputparameterbase.h  qxmodelbase.h  qxoutputparamaterbase.h  qxservicebase.h
